corrected css sorting and spacing

--- a/front-end/src/styles/CheckoutButton.css
+++ b/front-end/src/styles/CheckoutButton.css
@@ -1,10 +1,10 @@
 button {
   all: unset;
 }
+
 .checkout-bottom-btn-container {
   background: #0fea76;
-  bottom: 0px;
-  display: absolute;
+  bottom: 0;
   height: 40px;
   left: 50%;
   position: fixed;
@@ -12,13 +12,14 @@ button {
   transform: translateX(-50%);
   width: 75%;
 }
+
 .checkout-bottom-btn {
+  align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
   height: 100%;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .total-qty-span {
@@ -27,7 +28,7 @@ button {
 
 .cart-link {
   color: black;
-  text-decoration: none;
   font-weight: 800;
   margin-left: 15px;
+  text-decoration: none;
 }
